Add http endpoint to get services by headcode
